--- a/user-test/index.css
+++ b/user-test/index.css
@@ -38,6 +38,7 @@ body{
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    gap : 10px
 }
 
 .flex-control{
@@ -51,4 +52,8 @@ body{
 .color-input{
     border: 0;
     inset: 0;
+}
+
+.number-input{
+    width : 100px
 }
