--- a/user-test/index.css
+++ b/user-test/index.css
@@ -18,8 +18,10 @@ body{
 }
 
 .graph{
-    width: 100%;
-    height: 100%;
+    width: 95%;
+    height: 95%;
+    resize: both;
+    overflow: hidden;
 }
 
 .controls{
