--- a/user-test/index.css
+++ b/user-test/index.css
@@ -72,3 +72,32 @@ body{
 .number-input{
     align-self: center;
 }
+
+.color-container{
+    display : flex;
+    flex-direction: column;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    gap: 10px;
+}
+
+.color-type{
+    display : flex;
+    flex-direction : row;
+    height: 100px;
+    align-items: center;
+    justify-items: center;
+}
+
+.color-row{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.color-element{
+    height: 100%;
+    width: 100%;
+}
